[gd_scene load_steps=2 format=3 uid="uid://cp1xgv8y1d6im"]

[ext_resource type="Script" path="res://resources/overlap/ui/fps_hud.gd" id="1_7quua"]

[node name="FpsHud" type="CanvasLayer"]
script = ExtResource("1_7quua")
layer = 1

[node name="HudRoot" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
mouse_filter = 2

[node name="Crosshair" type="Control" parent="HudRoot"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
mouse_filter = 2

[node name="Horizontal" type="ColorRect" parent="HudRoot/Crosshair"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -9.0
offset_top = -1.0
offset_right = 9.0
offset_bottom = 1.0
color = Color(1, 1, 1, 1)
mouse_filter = 2

[node name="Vertical" type="ColorRect" parent="HudRoot/Crosshair"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -9.0
offset_right = 1.0
offset_bottom = 9.0
color = Color(1, 1, 1, 1)
mouse_filter = 2

[node name="PromptPanel" type="Panel" parent="HudRoot"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -110.0
offset_top = -94.0
offset_right = 110.0
offset_bottom = -50.0
custom_minimum_size = Vector2(220, 36)
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="HudRoot/PromptPanel"]
layout_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_left = 8
custom_constants/margin_top = 6
custom_constants/margin_right = 8
custom_constants/margin_bottom = 6

[node name="PromptLabel" type="Label" parent="HudRoot/PromptPanel/MarginContainer"]
layout_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
horizontal_alignment = 1
vertical_alignment = 1
text = "Interact"
mouse_filter = 2
